--- a/app/views/decidim/rest_full/system/api_clients/_form.html.erb
+++ b/app/views/decidim/rest_full/system/api_clients/_form.html.erb
@@ -8,8 +8,8 @@
         <h3 class="h5"><%= t('.scopes_label') %></h3>
         <% scope_options = %w[system proposals meetings debates pages] %>
         <% scope_options.each do |scope| %>
-            <label class="block py-2">
-                <%= form.check_box :scopes, { multiple: true, label: "", disabled: disabled, checked: (form.object.scopes.first || "").include?(scope)}, scope, nil %>
+            <label class="block py-2 <%= disabled && !form.object.scopes.to_a.include?(scope.to_s) ? "hidden" : "" %>">
+                <%= form.check_box :scopes, { multiple: true, label: "", disabled: disabled, checked: form.object.scopes.to_a.include?(scope.to_s) }, scope, nil %>
                 <span class="font-normal"><%= t("scope_#{scope}", scope: "decidim.rest_full.models.api_client.fields") %></span>
             </label>
         <% end %>
