--- a/app/views/decidim/rest_full/system/api_clients/_form.html.erb
+++ b/app/views/decidim/rest_full/system/api_clients/_form.html.erb
@@ -6,7 +6,7 @@
                     { multiple: false,  disabled: } %>
     <div>
         <h3 class="h5"><%= t('.scopes_label') %></h3>
-        <% scope_options = %w[system proposals meetings debates pages] %>
+        <% scope_options = %w[system proposals meetings debates pages blogs] %>
         <% scope_options.each do |scope| %>
             <label class="block py-2 <%= disabled && !form.object.scopes.to_a.include?(scope.to_s) ? "hidden" : "" %>">
                 <%= form.check_box :scopes, { multiple: true, label: "", disabled: disabled, checked: form.object.scopes.to_a.include?(scope.to_s) }, scope, nil %>
