:sparkles: (users) Unified user extended data management
- remove extended data management from impersonation callback
- add dedicated endpoint to get extended data for a given user
- add dedicated endpoint to update extended data for a given user
- harmonize documentation around extended data
- fix permissions issues on specifications and code

--- a/app/views/decidim/rest_full/system/api_clients/_system_permissions.html.erb
+++ b/app/views/decidim/rest_full/system/api_clients/_system_permissions.html.erb
@@ -28,7 +28,7 @@
   <div class="mt-4">
     <div class="font-bold py-2"><%= t('.user_perm') %></div>
     <div class="flex gap-6 flex-wrap">
-      <% ["system.users.read", "system.users.update", "system.users.destroy"].each do |permission| %>
+      <% ["system.users.read", "system.users.update", "system.users.destroy", "system.users.extended_data.read", "system.users.extended_data.update"].each do |permission| %>
         <label>
           <%= form.check_box :permissions, { multiple: true, label: "", checked: @api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
           <span class="font-normal"><%= t("#{permission}", scope: "decidim.rest_full.models.api_client.permission") %></span>
