test: Add specs for webhook model and jobs

--- a/app/views/decidim/rest_full/system/api_clients/_proposal_permissions.html.erb
+++ b/app/views/decidim/rest_full/system/api_clients/_proposal_permissions.html.erb
@@ -16,7 +16,7 @@
       <div class="mt-4">
         <strong >Webhook events</strong><br />
         <p class="text-sm">
-          Events the API client can subscribe to.
+          Events the API client is allowed to subscribe to.
         </p>
         <ul>
         <% ::Decidim::RestFull::events_for_proposals.each do |permission| %>
