--- a/app/views/decidim/rest_full/system/api_clients/_system_permissions.html.erb
+++ b/app/views/decidim/rest_full/system/api_clients/_system_permissions.html.erb
@@ -2,46 +2,46 @@
 <h2 class="border-b-4 h5 p-4" id="system_permissions">
     <%= t("scope_system", scope: "decidim.rest_full.models.api_client.fields") %>
 </h2>
-<div id="system_permissions" class="p-4 " >
+<div id="system_permissions" class="p-4 ">
   <div class="mt-4">
-    <div class="font-bold py-2"><%= t('.auth_type') %></div>
+    <div class="font-bold py-2"><%= t(".auth_type") %></div>
     <div class="flex gap-6 flex-wrap">
       <% ["oauth.impersonate", "oauth.login"].each do |permission| %>
         <label>
-          <%= form.check_box :permissions, { multiple: true, label: "", checked: @api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
+          <%= form.check_box :permissions, { multiple: true, label: "", checked: api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
           <span class="font-normal"><%= t("#{permission}", scope: "decidim.rest_full.models.api_client.permission") %></span>
         </label>
       <% end %>
     </div>
   </div>
   <div class="mt-4">
-    <div class="font-bold py-2"><%= t('.organization_perm') %></div>
+    <div class="font-bold py-2"><%= t(".organization_perm") %></div>
     <div class="flex gap-6 flex-wrap">
-      <% ["system.organizations.read", "system.organizations.update", "system.organizations.destroy"].each do |permission| %>
+      <% ["system.organizations.read", "system.organizations.update", "system.organizations.destroy", "system.organizations.extended_data.read", "system.organizations.extended_data.update"].each do |permission| %>
         <label>
-          <%= form.check_box :permissions, { multiple: true, label: "", checked: @api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
-          <span class="font-normal"><%= t("#{permission}", scope: "decidim.rest_full.models.api_client.permission") %></span>
+          <%= form.check_box :permissions, { multiple: true, label: "", checked: api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
+            <span class="font-normal"><%= t("#{permission}", scope: "decidim.rest_full.models.api_client.permission") %></span>
           </label>
       <% end %>
     </div>
   </div>
   <div class="mt-4">
-    <div class="font-bold py-2"><%= t('.user_perm') %></div>
+    <div class="font-bold py-2"><%= t(".user_perm") %></div>
     <div class="flex gap-6 flex-wrap">
       <% ["oauth.read", "system.users.update", "system.users.destroy"].each do |permission| %>
         <label>
-          <%= form.check_box :permissions, { multiple: true, label: "", checked: @api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
+          <%= form.check_box :permissions, { multiple: true, label: "", checked: api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
           <span class="font-normal"><%= t("#{permission}", scope: "decidim.rest_full.models.api_client.permission") %></span>
           </label>
       <% end %>
     </div>
   </div>
   <div class="mt-4">
-    <div class="font-bold py-2"><%= t('.rails_perm') %></div>
+    <div class="font-bold py-2"><%= t(".rails_perm") %></div>
     <div class="flex gap-6 flex-wrap">
       <% ["system.server.restart", "system.server.exec"].each do |permission| %>
         <label>
-          <%= form.check_box :permissions, { multiple: true, label: "", checked: @api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
+          <%= form.check_box :permissions, { multiple: true, label: "", checked: api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
           <span class="font-normal"><%= t("#{permission}", scope: "decidim.rest_full.models.api_client.permission") %></span>
           </label>
       <% end %>
