--- a/app/views/decidim/rest_full/system/api_clients/_proposal_permissions.html.erb
+++ b/app/views/decidim/rest_full/system/api_clients/_proposal_permissions.html.erb
@@ -2,19 +2,19 @@
   <h2 class="border-b-4 h5 p-4" id="proposals_permission">
       <%= t("scope_proposals", scope: "decidim.rest_full.models.api_client.fields") %>
   </h2>
-  <div id="proposals_permission" class="p-4 " >
+  <div id="proposals_permission" class="p-4 ">
     <div class="mt-4">
-      <div class="font-bold py-2"><%= t('.proposals') %></div>
+      <div class="font-bold py-2"><%= t(".proposals") %></div>
       <div class="flex gap-6 flex-wrap">
         <% ["proposals.read", "proposals.draft", "proposals.vote"].each do |permission| %>
           <label>
-            <%= form.check_box :permissions, { multiple: true, label: "", checked: @api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
+            <%= form.check_box :permissions, { multiple: true, label: "", checked: api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
             <span class="font-normal"><%= t("#{permission}", scope: "decidim.rest_full.models.api_client.permission") %></span>
           </label>
         <% end %>
       </div>
       <div class="mt-4">
-        <strong >Webhook events</strong><br />
+        <strong>Webhook events</strong><br>
         <p class="text-sm">
           Events the API client is allowed to subscribe to.
         </p>
@@ -22,7 +22,7 @@
         <% ::Decidim::RestFull::events_for_proposals.each do |permission| %>
           <li class="my-2">
           <label>
-            <%= form.check_box :permissions, { multiple: true, label: "", checked: @api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
+            <%= form.check_box :permissions, { multiple: true, label: "", checked: api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
             <span class="font-normal">
               <%= t("#{permission}", scope: "decidim.rest_full.models.api_client.permission") %>
             </span>
@@ -34,4 +34,3 @@
     </div>
   </div>
 </div>
-  
