--- a/app/views/decidim/rest_full/system/api_clients/_public_permissions.html.erb
+++ b/app/views/decidim/rest_full/system/api_clients/_public_permissions.html.erb
@@ -2,24 +2,24 @@
   <h2 class="border-b-4 h5 p-4" id="system_permissions">
       <%= t("scope_public", scope: "decidim.rest_full.models.api_client.fields") %>
   </h2>
-  <div id="system_permissions" class="p-4 " >
+  <div id="system_permissions" class="p-4 ">
     <div class="mt-4">
-      <div class="font-bold py-2"><%= t('.component') %></div>
+      <div class="font-bold py-2"><%= t(".component") %></div>
       <div class="flex gap-6 flex-wrap">
         <% ["public.component.read"].each do |permission| %>
           <label>
-            <%= form.check_box :permissions, { multiple: true, label: "", checked: @api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
+            <%= form.check_box :permissions, { multiple: true, label: "", checked: api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
             <span class="font-normal"><%= t("#{permission}", scope: "decidim.rest_full.models.api_client.permission") %></span>
           </label>
         <% end %>
       </div>
     </div>
     <div class="mt-4">
-      <div class="font-bold py-2"><%= t('.space') %></div>
+      <div class="font-bold py-2"><%= t(".space") %></div>
       <div class="flex gap-6 flex-wrap">
         <% ["public.space.read"].each do |permission| %>
           <label>
-            <%= form.check_box :permissions, { multiple: true, label: "", checked: @api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
+            <%= form.check_box :permissions, { multiple: true, label: "", checked: api_client.permissions.pluck(:permission).include?(permission.to_s) }, permission, nil %>
             <span class="font-normal"><%= t("#{permission}", scope: "decidim.rest_full.models.api_client.permission") %></span>
             </label>
         <% end %>
@@ -27,4 +27,3 @@
     </div>
   </div>
 </div>
-  
