--- a/app/views/decidim/rest_full/pages/show.html.erb
+++ b/app/views/decidim/rest_full/pages/show.html.erb
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Decidim Rest API</title>
+    <title><%= t(".title") %></title>
     <style>
         .container {
-            position: fixed; 
-            top: 0; 
-            left: 0; 
-            right: 0; 
-            bottom: 0; 
-            background: #313131; 
-            color: white; 
-            display: flex; 
-            align-items: center; 
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: #313131;
+            color: white;
+            display: flex;
+            align-items: center;
             justify-content: center;
+            flex-wrap: wrap;
+            flex-direction: column;
+        }
+        .h1 {
+          display: block;
+          min-width: 100%;
+          text-align: center;
         }
         .button {
             color: white;
@@ -23,7 +30,7 @@
             border: 1px solid white;
             margin: 1rem;
             font-size: 21px;
-            letter-spacing: 0.2px; 
+            letter-spacing: 0.2px;
             display: inline-block;
             border-radius: 4px;
             text-decoration: none;
@@ -38,12 +45,16 @@
 </head>
 <body>
     <div class="container">
-        <a class="button" href="#">
-            Documentation website
-        </a>
-        <a class="button" href="/api/rest/docs/openapi.json" target="_blank">
-            Open API spec 2
-        </a>
+        <h1 class="h1"><%= t(".title") %></h1>
+
+        <div>
+          <a class="button" href="https://octree-gva.github.io/decidim-rest-full/" target="_blank">
+              <%= t(".documentation_website") %>
+          </a>
+          <a class="button" href="/api/rest/docs/openapi.json" target="_blank">
+              <%= t(".open_api_spec") %>
+          </a>
+        </div>
     </div>
 </body>
 </html>
